// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Taro > jsx > Javascript Test > AdvancedRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > Basic 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Javascript Test > Basic Context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Javascript Test > Basic OnMount Update 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicOnMountUpdateComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  const [names, setNames] = useState(() => [\\"Steve\\", \\"PatrickJS\\"]);

  useEffect(() => {
    setName(\\"PatrickJS onInit\\" + props.hi);
  }, []);

  useEffect(() => {
    setName(\\"PatrickJS onMount\\" + props.bye);
  }, []);

  return <View>Hello {name}</View>;
}

export default MyBasicOnMountUpdateComponent;
"
`;

exports[`Taro > jsx > Javascript Test > Basic Outputs 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <View />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`Taro > jsx > Javascript Test > Basic Outputs Meta 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <View />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`Taro > jsx > Javascript Test > BasicAttribute 1`] = `"Cannot read properties of undefined (reading 'spellcheck')"`;

exports[`Taro > jsx > Javascript Test > BasicBooleanAttribute 1`] = `"Cannot read properties of undefined (reading 'toggle')"`;

exports[`Taro > jsx > Javascript Test > BasicChildComponent 1`] = `"Cannot read properties of undefined (reading 'id')"`;

exports[`Taro > jsx > Javascript Test > BasicFor 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Javascript Test > BasicRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > BasicRefAssignment 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`Taro > jsx > Javascript Test > BasicRefPrevious 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`Taro > jsx > Javascript Test > Button 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > Columns 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function Column(props) {
  function getColumns() {
    return props.columns || [];
  }

  function getGutterSize() {
    return typeof props.space === \\"number\\" ? props.space || 0 : 20;
  }

  function getWidth(index) {
    const columns = getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index) {
    const columns = getColumns();
    const gutterSize = getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${getWidth(index)}% - \${subtractWidth}px)\`;
  }

  return (
    <>
      <View className=\\"view\\">
        {props.columns?.map((column, index) => (
          <View className=\\"view-2\\">
            {column.content}
            {index}
          </View>
        ))}
      </View>
      <style jsx>{\`
        .view {
          display: flex;
          flex-direction: column;
          align-items: stretch;
          line-height: normal;
        }
        @media (max-width: 999px) {
          .view {
            flex-direction: row;
          }
        }
        @media (max-width: 639px) {
          .view {
            flex-direction: row-reverse;
          }
        }
        .view-2 {
          flex-grow: 1;
        }
      \`}</style>
    </>
  );
}

export default Column;
"
`;

exports[`Taro > jsx > Javascript Test > ContentSlotHtml 1`] = `
"import * as React from \\"react\\";
import { View } from \\"@tarojs/components\\";

function ContentSlotCode(props) {
  return (
    <View>
      <>{props.slotTesting}</>
      <View>
        <View />
      </View>
      <View>
        <>{props.children}</>
      </View>
    </View>
  );
}

export default ContentSlotCode;
"
`;

exports[`Taro > jsx > Javascript Test > ContentSlotJSX 1`] = `"Cannot read properties of undefined (reading 'name')"`;

exports[`Taro > jsx > Javascript Test > CustomCode 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > Embed 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > Form 1`] = `"Cannot read properties of undefined (reading 'validate')"`;

exports[`Taro > jsx > Javascript Test > Image 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > Image State 1`] = `"Cannot read properties of undefined (reading 'src')"`;

exports[`Taro > jsx > Javascript Test > Img 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Javascript Test > Input 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > InputParent 1`] = `"Cannot read properties of undefined (reading 'onChange')"`;

exports[`Taro > jsx > Javascript Test > RawText 1`] = `"Cannot read properties of undefined (reading 'innerHTML')"`;

exports[`Taro > jsx > Javascript Test > Section 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > Select 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > SlotDefault 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props) {
  return (
    <View>
      <>{props.children || <View>Default content</View>}</>
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Javascript Test > SlotHtml 1`] = `
"import * as React from \\"react\\";
import ContentSlotCode from \\"./content-slot-jsx.raw\\";
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props) {
  return (
    <View>
      <ContentSlotCode testing={<div>Hello</div>}></ContentSlotCode>
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Javascript Test > SlotJsx 1`] = `
"import * as React from \\"react\\";
import ContentSlotCode from \\"./content-slot-jsx.raw\\";
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props) {
  return (
    <View>
      <ContentSlotCode slotTesting={<View>Hello</View>} />
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Javascript Test > SlotNamed 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props) {
  return (
    <View>
      <>{props.myAwesomeSlot}</>
      <>{props.top}</>
      <>{props.left || \\"Default left\\"}</>
      <>{props.children || \\"Default Child\\"}</>
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Javascript Test > Stamped.io 1`] = `"Cannot read properties of undefined (reading 'data-user')"`;

exports[`Taro > jsx > Javascript Test > Submit 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > Text 1`] = `"Cannot read properties of undefined (reading 'contentEditable')"`;

exports[`Taro > jsx > Javascript Test > Textarea 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > Video 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > arrowFunctionInUseStore 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [name, setName] = useState(() => \\"steve\\");

  function setName(value) {
    setName(value);
  }

  function updateNameWithArrowFn(value) {
    setName(value);
  }

  return <View>Hello {name}</View>;
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Javascript Test > basicForNoTagReference 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicForNoTagRefComponent(props) {
  const [name, setName] = useState(() => \\"VincentW\\");

  const [TagName, setTagName] = useState(() => \\"div\\");

  const [tag, setTag] = useState(() => \\"span\\");

  function TagNameGetter() {
    return \\"span\\";
  }

  const TagNameGetterRef = TagNameGetter();

  return (
    <TagNameGetterRef>
      Hello <View>{name}</View>
      {props.actions?.map((action) => (
        <TagName>
          <View />
          <Text>{action.text}</Text>
        </TagName>
      ))}
    </TagNameGetterRef>
  );
}

export default MyBasicForNoTagRefComponent;
"
`;

exports[`Taro > jsx > Javascript Test > basicForwardRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > basicForwardRefMetadata 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > basicOnUpdateReturn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicOnUpdateReturnComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        setName(data.name);
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }, [name]);

  return <View>Hello! {name}</View>;
}

export default MyBasicOnUpdateReturnComponent;
"
`;

exports[`Taro > jsx > Javascript Test > class + ClassName + css 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  return (
    <>
      <View className=\\"view\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > class + css 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  return (
    <>
      <View className=\\"view\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > className + css 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  return (
    <>
      <View className=\\"view\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > className 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function ClassNameCode(props) {
  const [bindings, setBindings] = useState(() => \\"a binding\\");

  return (
    <View>
      <View>Without Binding</View>
      <View>With binding</View>
    </View>
  );
}

export default ClassNameCode;
"
`;

exports[`Taro > jsx > Javascript Test > classState 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Javascript Test > componentWithContext 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Javascript Test > componentWithContextMultiRoot 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Javascript Test > contentState 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Javascript Test > defaultProps 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > defaultPropsOutsideComponent 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > defaultValsWithTypes 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";
const DEFAULT_VALUES = {
  name: \\"Sami\\",
};

function ComponentWithTypes(props) {
  return <View> Hello {props.name || DEFAULT_VALUES.name}</View>;
}

export default ComponentWithTypes;
"
`;

exports[`Taro > jsx > Javascript Test > expressionState 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [refToUse, setRefToUse] = useState(() =>
    !(props.componentRef instanceof Function) ? props.componentRef : null
  );

  return <View>{refToUse}</View>;
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Javascript Test > getterState 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function Button(props) {
  function foo2() {
    return props.foo + \\"foo\\";
  }

  function bar() {
    return \\"bar\\";
  }

  function baz(i) {
    return i + foo2().length;
  }

  return (
    <View>
      <View>{foo2()}</View>
      <View>{bar()}</View>
      <View>{baz(1)}</View>
    </View>
  );
}

export default Button;
"
`;

exports[`Taro > jsx > Javascript Test > import types 1`] = `"Cannot read properties of undefined (reading 'state.getRenderContentProps(props.renderContentProps.block, 0)')"`;

exports[`Taro > jsx > Javascript Test > multipleOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MultipleOnUpdate(props) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  useEffect(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });

  return <View />;
}

export default MultipleOnUpdate;
"
`;

exports[`Taro > jsx > Javascript Test > multipleOnUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MultipleOnUpdateWithDeps(props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  const [c, setC] = useState(() => \\"c\\");

  const [d, setD] = useState(() => \\"d\\");

  useEffect(() => {
    console.log(\\"Runs when a or b changes\\", a, b);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [a, b]);
  useEffect(() => {
    console.log(\\"Runs when c or d changes\\", c, d);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [c, d]);

  return <View />;
}

export default MultipleOnUpdateWithDeps;
"
`;

exports[`Taro > jsx > Javascript Test > multipleSpreads 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`Taro > jsx > Javascript Test > nestedShow 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function NestedShow(props) {
  return (
    <>
      {props.conditionA ? (
        <>
          {!props.conditionB ? (
            <View>if condition A and condition B</View>
          ) : (
            <View>else-condition-B</View>
          )}
        </>
      ) : (
        <View>else-condition-A</View>
      )}
    </>
  );
}

export default NestedShow;
"
`;

exports[`Taro > jsx > Javascript Test > nestedStyles 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function NestedStyles(props) {
  return (
    <>
      <View className=\\"view\\">Hello world</View>
      <style jsx>{\`
        .view {
          display: flex;
          --bar: red;
          color: var(--bar);
        }
        @media (max-width: env(--mobile)) {
          .view {
            display: block;
          }
        }
        .view:hover {
          display: flex;
        }
        .view:active {
          display: inline;
        }
        .view .nested-selector {
          display: grid;
        }
        .view .nested-selector:hover {
          display: block;
        }
        .view.nested-selector:active {
          display: inline-block;
        }
      \`}</style>
    </>
  );
}

export default NestedStyles;
"
`;

exports[`Taro > jsx > Javascript Test > onEvent 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Javascript Test > onInit & onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function OnInit(props) {
  useEffect(() => {
    console.log(\\"onInit\\");
  }, []);

  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  return <View />;
}

export default OnInit;
"
`;

exports[`Taro > jsx > Javascript Test > onInit 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";
export const defaultValues = {
  name: \\"PatrickJS\\",
};

function OnInit(props) {
  const [name, setName] = useState(() => \\"\\");

  useEffect(() => {
    setName(defaultValues.name || props.name);
    console.log(\\"set defaults with props\\");
  }, []);

  return <View>Default name defined by parent {name}</View>;
}

export default OnInit;
"
`;

exports[`Taro > jsx > Javascript Test > onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function Comp(props) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);

  useEffect(() => {
    return () => {
      console.log(\\"Runs on unMount\\");
    };
  }, []);

  return <View />;
}

export default Comp;
"
`;

exports[`Taro > jsx > Javascript Test > onMountMultiple 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function Comp(props) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"Another one runs on Mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"SSR runs on Mount\\");
  }, []);

  return <View />;
}

export default Comp;
"
`;

exports[`Taro > jsx > Javascript Test > onUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function OnUpdate(props) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });

  return <View />;
}

export default OnUpdate;
"
`;

exports[`Taro > jsx > Javascript Test > onUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function OnUpdateWithDeps(props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  useEffect(() => {
    console.log(\\"Runs when a, b or size changes\\", a, b, props.size);
  }, [a, b, props.size]);

  return <View />;
}

export default OnUpdateWithDeps;
"
`;

exports[`Taro > jsx > Javascript Test > preserveExportOrLocalStatement 1`] = `
"import * as React from \\"react\\";
import { View } from \\"@tarojs/components\\";
const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run(value) {}

function MyBasicComponent(props) {
  return <View />;
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > preserveTyping 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  return (
    <View>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > propsDestructure 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  const [name, setName] = useState(() => \\"Decadef20\\");

  return (
    <View>
      {props.children}
      {props.type}
      Hello! I can run in React, Vue, Solid, or Liquid!
    </View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > propsInterface 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  return (
    <View>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > propsType 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  return (
    <View>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > referencingFunInsideHook 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function OnUpdate(props) {
  function foo(params) {}

  function bar() {}

  function zoo() {
    const params = {
      cb: bar,
    };
  }

  useEffect(() => {
    foo({
      someOption: bar,
    });
  });

  return <View />;
}

export default OnUpdate;
"
`;

exports[`Taro > jsx > Javascript Test > renderBlock 1`] = `"Cannot read properties of undefined (reading 'state.attributes')"`;

exports[`Taro > jsx > Javascript Test > renderContentExample 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Javascript Test > rootFragmentMultiNode 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Javascript Test > rootShow 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function RenderStyles(props) {
  return (
    <>
      {props.foo === \\"bar\\" ? (
        <>
          <View>Bar</View>
        </>
      ) : (
        <View>Foo</View>
      )}
    </>
  );
}

export default RenderStyles;
"
`;

exports[`Taro > jsx > Javascript Test > self-referencing component 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  return (
    <View>
      {props.name}
      {props.name === \\"Batman\\" ? <MyComponent name=\\"Bruce Wayne\\" /> : null}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Javascript Test > self-referencing component with children 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  return (
    <View>
      {props.name}
      {props.children}
      {props.name === \\"Batman\\" ? (
        <MyComponent name=\\"Bruce\\">
          <View>Wayne</View>
        </MyComponent>
      ) : null}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Javascript Test > showWithFor 1`] = `"Cannot read properties of undefined (reading 'key')"`;

exports[`Taro > jsx > Javascript Test > showWithRootText 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function ShowRootText(props) {
  return (
    <>{props.conditionA ? <>ContentA</> : <View>else-condition-A</View>}</>
  );
}

export default ShowRootText;
"
`;

exports[`Taro > jsx > Javascript Test > signalsOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  useEffect(() => {
    console.log(\\"props.id changed\\", props.id);
    console.log(\\"props.foo.value.bar.baz changed\\", props.foo.value.bar.baz);
  }, [props.id, props.foo.value.bar.baz]);

  return (
    <>
      <View className=\\"view\\">
        {props.id}
        {props.foo.value.bar.baz}
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Javascript Test > spreadAttrs 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`Taro > jsx > Javascript Test > spreadNestedProps 1`] = `"Cannot read properties of undefined (reading 'props.nested')"`;

exports[`Taro > jsx > Javascript Test > spreadProps 1`] = `"Cannot read properties of undefined (reading 'props')"`;

exports[`Taro > jsx > Javascript Test > styleClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Javascript Test > stylePropClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Javascript Test > subComponent 1`] = `
"import * as React from \\"react\\";
import Foo from \\"./foo-sub-component\\";
import \\"@tarojs/components\\";

function SubComponent(props) {
  return <Foo />;
}

export default SubComponent;
"
`;

exports[`Taro > jsx > Javascript Test > svgComponent 1`] = `"Cannot read properties of undefined (reading 'viewBox')"`;

exports[`Taro > jsx > Javascript Test > typeDependency 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function TypeDependency(props) {
  return <View>{props.foo}</View>;
}

export default TypeDependency;
"
`;

exports[`Taro > jsx > Javascript Test > use-style 1`] = `
"import * as React from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  return (
    <>
      <Button type=\\"button\\">Button</Button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Javascript Test > use-style-and-css 1`] = `
"import * as React from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  return (
    <>
      <Button type=\\"button\\" className=\\"button\\">
        Button
      </Button>
      <style jsx>{\`
        button {
          font-size: 12px;
          outline: 1px solid black;
        }

        .button {
          background: blue;
          color: white;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Javascript Test > use-style-outside-component 1`] = `
"import * as React from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  return (
    <>
      <Button type=\\"button\\">Button</Button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Javascript Test > useTarget 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function UseTargetComponent(props) {
  function name() {
    const prefix = \\"t\\";
    return prefix + \\"foo\\";
  }

  const [lastName, setLastName] = useState(() => \\"bar\\");

  useEffect(() => {}, []);

  return <View>{name()}</View>;
}

export default UseTargetComponent;
"
`;

exports[`Taro > jsx > Javascript Test > webComponent 1`] = `
"import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { register } from \\"swiper/element/bundle\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicWebComponent(props) {
  useEffect(() => {
    register();
  }, []);

  return (
    <View slides-per-view=\\"3\\" navigation=\\"true\\" pagination=\\"true\\">
      <View>Slide 1</View>
      <View>Slide 2</View>
      <View>Slide 3</View>
    </View>
  );
}

export default MyBasicWebComponent;
"
`;

exports[`Taro > jsx > Remove Internal mitosis package 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  return (
    <View>Hello {name}! I can run in React, Qwik, Vue, Solid, or Liquid!</View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > AdvancedRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > Basic 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Typescript Test > Basic Context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Typescript Test > Basic OnMount Update 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

export interface Props {
  hi: string;
  bye: string;
}

import { View, Text } from \\"@tarojs/components\\";

function MyBasicOnMountUpdateComponent(props: Props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  const [names, setNames] = useState(() => [\\"Steve\\", \\"PatrickJS\\"]);

  useEffect(() => {
    setName(\\"PatrickJS onInit\\" + props.hi);
  }, []);

  useEffect(() => {
    setName(\\"PatrickJS onMount\\" + props.bye);
  }, []);

  return <View>Hello {name}</View>;
}

export default MyBasicOnMountUpdateComponent;
"
`;

exports[`Taro > jsx > Typescript Test > Basic Outputs 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyBasicOutputsComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <View />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`Taro > jsx > Typescript Test > Basic Outputs Meta 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyBasicOutputsComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <View />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`Taro > jsx > Typescript Test > BasicAttribute 1`] = `"Cannot read properties of undefined (reading 'spellcheck')"`;

exports[`Taro > jsx > Typescript Test > BasicBooleanAttribute 1`] = `"Cannot read properties of undefined (reading 'toggle')"`;

exports[`Taro > jsx > Typescript Test > BasicChildComponent 1`] = `"Cannot read properties of undefined (reading 'id')"`;

exports[`Taro > jsx > Typescript Test > BasicFor 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Typescript Test > BasicRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > BasicRefAssignment 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`Taro > jsx > Typescript Test > BasicRefPrevious 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`Taro > jsx > Typescript Test > Button 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > Columns 1`] = `
"import * as React from \\"react\\";

type Column = {
  content: any; // TODO: Implement this when support for dynamic CSS lands

  width?: number;
};
export interface ColumnProps {
  columns?: Column[]; // TODO: Implement this when support for dynamic CSS lands

  space?: number; // TODO: Implement this when support for dynamic CSS lands

  stackColumnsAt?: \\"tablet\\" | \\"mobile\\" | \\"never\\"; // TODO: Implement this when support for dynamic CSS lands

  reverseColumnsWhenStacked?: boolean;
}

import { View, Text } from \\"@tarojs/components\\";

function Column(props: ColumnProps) {
  function getColumns() {
    return props.columns || [];
  }

  function getGutterSize() {
    return typeof props.space === \\"number\\" ? props.space || 0 : 20;
  }

  function getWidth(index: number) {
    const columns = getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index: number) {
    const columns = getColumns();
    const gutterSize = getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${getWidth(index)}% - \${subtractWidth}px)\`;
  }

  return (
    <>
      <View className=\\"view\\">
        {props.columns?.map((column, index) => (
          <View className=\\"view-2\\">
            {column.content}
            {index}
          </View>
        ))}
      </View>
      <style jsx>{\`
        .view {
          display: flex;
          flex-direction: column;
          align-items: stretch;
          line-height: normal;
        }
        @media (max-width: 999px) {
          .view {
            flex-direction: row;
          }
        }
        @media (max-width: 639px) {
          .view {
            flex-direction: row-reverse;
          }
        }
        .view-2 {
          flex-grow: 1;
        }
      \`}</style>
    </>
  );
}

export default Column;
"
`;

exports[`Taro > jsx > Typescript Test > ContentSlotHtml 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string | JSX.Element;
  slotTesting: JSX.Element;
};
import type { JSX } from \\"../../../../jsx-runtime\\";
import { View } from \\"@tarojs/components\\";

function ContentSlotCode(props: Props) {
  return (
    <View>
      <>{props.slotTesting}</>
      <View>
        <View />
      </View>
      <View>
        <>{props.children}</>
      </View>
    </View>
  );
}

export default ContentSlotCode;
"
`;

exports[`Taro > jsx > Typescript Test > ContentSlotJSX 1`] = `"Cannot read properties of undefined (reading 'name')"`;

exports[`Taro > jsx > Typescript Test > CustomCode 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > Embed 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > Form 1`] = `"Cannot read properties of undefined (reading 'validate')"`;

exports[`Taro > jsx > Typescript Test > Image 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > Image State 1`] = `"Cannot read properties of undefined (reading 'src')"`;

exports[`Taro > jsx > Typescript Test > Img 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Typescript Test > Input 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > InputParent 1`] = `"Cannot read properties of undefined (reading 'onChange')"`;

exports[`Taro > jsx > Typescript Test > RawText 1`] = `"Cannot read properties of undefined (reading 'innerHTML')"`;

exports[`Taro > jsx > Typescript Test > Section 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > Select 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > SlotDefault 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props: Props) {
  return (
    <View>
      <>{props.children || <View>Default content</View>}</>
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Typescript Test > SlotHtml 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};
import ContentSlotCode from \\"./content-slot-jsx.raw\\";
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props: Props) {
  return (
    <View>
      <ContentSlotCode testing={<div>Hello</div>}></ContentSlotCode>
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Typescript Test > SlotJsx 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};
import ContentSlotCode from \\"./content-slot-jsx.raw\\";
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props: Props) {
  return (
    <View>
      <ContentSlotCode slotTesting={<View>Hello</View>} />
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Typescript Test > SlotNamed 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};
import { View, Text } from \\"@tarojs/components\\";

function SlotCode(props: Props) {
  return (
    <View>
      <>{props.myAwesomeSlot}</>
      <>{props.top}</>
      <>{props.left || \\"Default left\\"}</>
      <>{props.children || \\"Default Child\\"}</>
    </View>
  );
}

export default SlotCode;
"
`;

exports[`Taro > jsx > Typescript Test > Stamped.io 1`] = `"Cannot read properties of undefined (reading 'data-user')"`;

exports[`Taro > jsx > Typescript Test > Submit 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > Text 1`] = `"Cannot read properties of undefined (reading 'contentEditable')"`;

exports[`Taro > jsx > Typescript Test > Textarea 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > Video 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > arrowFunctionInUseStore 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [name, setName] = useState(() => \\"steve\\");

  function setName(value) {
    setName(value);
  }

  function updateNameWithArrowFn(value) {
    setName(value);
  }

  return <View>Hello {name}</View>;
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Typescript Test > basicForNoTagReference 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicForNoTagRefComponent(props: any) {
  const [name, setName] = useState(() => \\"VincentW\\");

  const [TagName, setTagName] = useState(() => \\"div\\");

  const [tag, setTag] = useState(() => \\"span\\");

  function TagNameGetter() {
    return \\"span\\";
  }

  const TagNameGetterRef = TagNameGetter();

  return (
    <TagNameGetterRef>
      Hello <View>{name}</View>
      {props.actions?.map((action) => (
        <TagName>
          <View />
          <Text>{action.text}</Text>
        </TagName>
      ))}
    </TagNameGetterRef>
  );
}

export default MyBasicForNoTagRefComponent;
"
`;

exports[`Taro > jsx > Typescript Test > basicForwardRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > basicForwardRefMetadata 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > basicOnUpdateReturn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicOnUpdateReturnComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        setName(data.name);
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }, [name]);

  return <View>Hello! {name}</View>;
}

export default MyBasicOnUpdateReturnComponent;
"
`;

exports[`Taro > jsx > Typescript Test > class + ClassName + css 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: any) {
  return (
    <>
      <View className=\\"view\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > class + css 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: any) {
  return (
    <>
      <View className=\\"view\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > className + css 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: any) {
  return (
    <>
      <View className=\\"view\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > className 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

type Props = {
  [key: string]: string | JSX.Element;
  slotTesting: JSX.Element;
};
import type { JSX } from \\"../../../../jsx-runtime\\";
import { View, Text } from \\"@tarojs/components\\";

function ClassNameCode(props: Props) {
  const [bindings, setBindings] = useState(() => \\"a binding\\");

  return (
    <View>
      <View>Without Binding</View>
      <View>With binding</View>
    </View>
  );
}

export default ClassNameCode;
"
`;

exports[`Taro > jsx > Typescript Test > classState 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Typescript Test > componentWithContext 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Typescript Test > componentWithContextMultiRoot 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Typescript Test > contentState 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Typescript Test > defaultProps 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > defaultPropsOutsideComponent 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > defaultValsWithTypes 1`] = `
"import * as React from \\"react\\";

type Props = {
  name: string;
};
import { View, Text } from \\"@tarojs/components\\";
const DEFAULT_VALUES: Props = {
  name: \\"Sami\\",
};

function ComponentWithTypes(props: Props) {
  return <View> Hello {props.name || DEFAULT_VALUES.name}</View>;
}

export default ComponentWithTypes;
"
`;

exports[`Taro > jsx > Typescript Test > expressionState 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [refToUse, setRefToUse] = useState(() =>
    !(props.componentRef instanceof Function) ? props.componentRef : null
  );

  return <View>{refToUse}</View>;
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Typescript Test > getterState 1`] = `
"import * as React from \\"react\\";

export interface ButtonProps {
  foo: string;
}

import { View, Text } from \\"@tarojs/components\\";

function Button(props: ButtonProps) {
  function foo2() {
    return props.foo + \\"foo\\";
  }

  function bar() {
    return \\"bar\\";
  }

  function baz(i: number) {
    return i + foo2().length;
  }

  return (
    <View>
      <View>{foo2()}</View>
      <View>{bar()}</View>
      <View>{baz(1)}</View>
    </View>
  );
}

export default Button;
"
`;

exports[`Taro > jsx > Typescript Test > import types 1`] = `"Cannot read properties of undefined (reading 'state.getRenderContentProps(props.renderContentProps.block, 0)')"`;

exports[`Taro > jsx > Typescript Test > multipleOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MultipleOnUpdate(props: any) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  useEffect(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });

  return <View />;
}

export default MultipleOnUpdate;
"
`;

exports[`Taro > jsx > Typescript Test > multipleOnUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MultipleOnUpdateWithDeps(props: any) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  const [c, setC] = useState(() => \\"c\\");

  const [d, setD] = useState(() => \\"d\\");

  useEffect(() => {
    console.log(\\"Runs when a or b changes\\", a, b);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [a, b]);
  useEffect(() => {
    console.log(\\"Runs when c or d changes\\", c, d);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [c, d]);

  return <View />;
}

export default MultipleOnUpdateWithDeps;
"
`;

exports[`Taro > jsx > Typescript Test > multipleSpreads 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`Taro > jsx > Typescript Test > nestedShow 1`] = `
"import * as React from \\"react\\";

interface Props {
  conditionA: boolean;
  conditionB: boolean;
}

import { View, Text } from \\"@tarojs/components\\";

function NestedShow(props: Props) {
  return (
    <>
      {props.conditionA ? (
        <>
          {!props.conditionB ? (
            <View>if condition A and condition B</View>
          ) : (
            <View>else-condition-B</View>
          )}
        </>
      ) : (
        <View>else-condition-A</View>
      )}
    </>
  );
}

export default NestedShow;
"
`;

exports[`Taro > jsx > Typescript Test > nestedStyles 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function NestedStyles(props: any) {
  return (
    <>
      <View className=\\"view\\">Hello world</View>
      <style jsx>{\`
        .view {
          display: flex;
          --bar: red;
          color: var(--bar);
        }
        @media (max-width: env(--mobile)) {
          .view {
            display: block;
          }
        }
        .view:hover {
          display: flex;
        }
        .view:active {
          display: inline;
        }
        .view .nested-selector {
          display: grid;
        }
        .view .nested-selector:hover {
          display: block;
        }
        .view.nested-selector:active {
          display: inline-block;
        }
      \`}</style>
    </>
  );
}

export default NestedStyles;
"
`;

exports[`Taro > jsx > Typescript Test > onEvent 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`Taro > jsx > Typescript Test > onInit & onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function OnInit(props: any) {
  useEffect(() => {
    console.log(\\"onInit\\");
  }, []);

  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  return <View />;
}

export default OnInit;
"
`;

exports[`Taro > jsx > Typescript Test > onInit 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

type Props = {
  name: string;
};
import { View, Text } from \\"@tarojs/components\\";
export const defaultValues = {
  name: \\"PatrickJS\\",
};

function OnInit(props: Props) {
  const [name, setName] = useState(() => \\"\\");

  useEffect(() => {
    setName(defaultValues.name || props.name);
    console.log(\\"set defaults with props\\");
  }, []);

  return <View>Default name defined by parent {name}</View>;
}

export default OnInit;
"
`;

exports[`Taro > jsx > Typescript Test > onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function Comp(props: any) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);

  useEffect(() => {
    return () => {
      console.log(\\"Runs on unMount\\");
    };
  }, []);

  return <View />;
}

export default Comp;
"
`;

exports[`Taro > jsx > Typescript Test > onMountMultiple 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function Comp(props: any) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"Another one runs on Mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"SSR runs on Mount\\");
  }, []);

  return <View />;
}

export default Comp;
"
`;

exports[`Taro > jsx > Typescript Test > onUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function OnUpdate(props: any) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });

  return <View />;
}

export default OnUpdate;
"
`;

exports[`Taro > jsx > Typescript Test > onUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

type Props = {
  size: string;
};
import { View } from \\"@tarojs/components\\";

function OnUpdateWithDeps(props: Props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  useEffect(() => {
    console.log(\\"Runs when a, b or size changes\\", a, b, props.size);
  }, [a, b, props.size]);

  return <View />;
}

export default OnUpdateWithDeps;
"
`;

exports[`Taro > jsx > Typescript Test > preserveExportOrLocalStatement 1`] = `
"import * as React from \\"react\\";

type Types = {
  s: any[];
};
interface IPost {
  len: number;
}
export interface MyBasicComponentProps {
  id: string;
}

import { View } from \\"@tarojs/components\\";
const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run<T>(value: T) {}

function MyBasicComponent(props: MyBasicComponentProps) {
  return <View />;
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > preserveTyping 1`] = `
"import * as React from \\"react\\";

export type A = \\"test\\";
export interface C {
  n: \\"test\\";
}
type B = \\"test2\\";
interface D {
  n: \\"test\\";
}
export interface MyBasicComponentProps {
  name: string;
  age?: number;
}

import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: MyBasicComponentProps) {
  return (
    <View>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > propsDestructure 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

type Props = {
  children: any;
  type: string;
};
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: Props) {
  const [name, setName] = useState(() => \\"Decadef20\\");

  return (
    <View>
      {props.children}
      {props.type}
      Hello! I can run in React, Vue, Solid, or Liquid!
    </View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > propsInterface 1`] = `
"import * as React from \\"react\\";

interface Person {
  name: string;
  age?: number;
}

import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: Person | never) {
  return (
    <View>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > propsType 1`] = `
"import * as React from \\"react\\";

type Person = {
  name: string;
  age?: number;
};
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: Person) {
  return (
    <View>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</View>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > referencingFunInsideHook 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function OnUpdate(props: any) {
  function foo(params) {}

  function bar() {}

  function zoo() {
    const params = {
      cb: bar,
    };
  }

  useEffect(() => {
    foo({
      someOption: bar,
    });
  });

  return <View />;
}

export default OnUpdate;
"
`;

exports[`Taro > jsx > Typescript Test > renderBlock 1`] = `"Cannot read properties of undefined (reading 'state.attributes')"`;

exports[`Taro > jsx > Typescript Test > renderContentExample 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > jsx > Typescript Test > rootFragmentMultiNode 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`Taro > jsx > Typescript Test > rootShow 1`] = `
"import * as React from \\"react\\";

export interface RenderStylesProps {
  foo: string;
}

import { View, Text } from \\"@tarojs/components\\";

function RenderStyles(props: RenderStylesProps) {
  return (
    <>
      {props.foo === \\"bar\\" ? (
        <>
          <View>Bar</View>
        </>
      ) : (
        <View>Foo</View>
      )}
    </>
  );
}

export default RenderStyles;
"
`;

exports[`Taro > jsx > Typescript Test > self-referencing component 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  return (
    <View>
      {props.name}
      {props.name === \\"Batman\\" ? <MyComponent name=\\"Bruce Wayne\\" /> : null}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Typescript Test > self-referencing component with children 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  return (
    <View>
      {props.name}
      {props.children}
      {props.name === \\"Batman\\" ? (
        <MyComponent name=\\"Bruce\\">
          <View>Wayne</View>
        </MyComponent>
      ) : null}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Typescript Test > showWithFor 1`] = `"Cannot read properties of undefined (reading 'key')"`;

exports[`Taro > jsx > Typescript Test > showWithRootText 1`] = `
"import * as React from \\"react\\";

interface Props {
  conditionA: boolean;
}

import { View, Text } from \\"@tarojs/components\\";

function ShowRootText(props: Props) {
  return (
    <>{props.conditionA ? <>ContentA</> : <View>else-condition-A</View>}</>
  );
}

export default ShowRootText;
"
`;

exports[`Taro > jsx > Typescript Test > signalsOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

type Props = {
  id: string;
  foo: {
    bar: {
      baz: number;
    };
  };
};
import { View, Text } from \\"@tarojs/components\\";

function MyBasicComponent(props: Props) {
  useEffect(() => {
    console.log(\\"props.id changed\\", props.id);
    console.log(\\"props.foo.value.bar.baz changed\\", props.foo.bar.baz);
  }, [props.id, props.foo.bar.baz]);

  return (
    <>
      <View className=\\"view\\">
        {props.id}
        {props.foo.bar.baz}
      </View>
      <style jsx>{\`
        .view {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Taro > jsx > Typescript Test > spreadAttrs 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`Taro > jsx > Typescript Test > spreadNestedProps 1`] = `"Cannot read properties of undefined (reading 'props.nested')"`;

exports[`Taro > jsx > Typescript Test > spreadProps 1`] = `"Cannot read properties of undefined (reading 'props')"`;

exports[`Taro > jsx > Typescript Test > styleClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Typescript Test > stylePropClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`Taro > jsx > Typescript Test > subComponent 1`] = `
"import * as React from \\"react\\";
import Foo from \\"./foo-sub-component\\";
import \\"@tarojs/components\\";

function SubComponent(props: any) {
  return <Foo />;
}

export default SubComponent;
"
`;

exports[`Taro > jsx > Typescript Test > svgComponent 1`] = `"Cannot read properties of undefined (reading 'viewBox')"`;

exports[`Taro > jsx > Typescript Test > typeDependency 1`] = `
"import * as React from \\"react\\";

export type TypeDependencyProps = {
  foo: Foo;
  foo2: Foo2;
};
import type { Foo } from \\"./foo-type\\";
import type { Foo as Foo2 } from \\"./type-export\\";
import { View, Text } from \\"@tarojs/components\\";

function TypeDependency(props: TypeDependencyProps) {
  return <View>{props.foo}</View>;
}

export default TypeDependency;
"
`;

exports[`Taro > jsx > Typescript Test > use-style 1`] = `
"import * as React from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  return (
    <>
      <Button type=\\"button\\">Button</Button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Typescript Test > use-style-and-css 1`] = `
"import * as React from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  return (
    <>
      <Button type=\\"button\\" className=\\"button\\">
        Button
      </Button>
      <style jsx>{\`
        button {
          font-size: 12px;
          outline: 1px solid black;
        }

        .button {
          background: blue;
          color: white;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Typescript Test > use-style-outside-component 1`] = `
"import * as React from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  return (
    <>
      <Button type=\\"button\\">Button</Button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > jsx > Typescript Test > useTarget 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function UseTargetComponent(props: any) {
  function name() {
    const prefix = \\"t\\";
    return prefix + \\"foo\\";
  }

  const [lastName, setLastName] = useState(() => \\"bar\\");

  useEffect(() => {}, []);

  return <View>{name()}</View>;
}

export default UseTargetComponent;
"
`;

exports[`Taro > jsx > Typescript Test > webComponent 1`] = `
"import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { register } from \\"swiper/element/bundle\\";
import { View, Text } from \\"@tarojs/components\\";

function MyBasicWebComponent(props: any) {
  useEffect(() => {
    register();
  }, []);

  return (
    <View slides-per-view=\\"3\\" navigation=\\"true\\" pagination=\\"true\\">
      <View>Slide 1</View>
      <View>Slide 2</View>
      <View>Slide 3</View>
    </View>
  );
}

export default MyBasicWebComponent;
"
`;

exports[`Taro > svelte > Javascript Test > basic 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [name, setName] = useState(() => \\"Steve\\");

  return (
    <View>
      <Input onChange={(event) => setName(event.target.value)} value={name} />
      Hello! I can run in React, Vue, Solid, or Liquid!
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > bindGroup 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [tortilla, setTortilla] = useState(() => \\"Plain\\");

  const [fillings, setFillings] = useState(() => []);

  return (
    <View>
      <Input
        type=\\"radio\\"
        value=\\"Plain\\"
        checked={tortilla === \\"Plain\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <Input
        type=\\"radio\\"
        value=\\"Whole wheat\\"
        checked={tortilla === \\"Whole wheat\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <Input
        type=\\"radio\\"
        value=\\"Spinach\\"
        checked={tortilla === \\"Spinach\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <View />
      <View />
      <Input
        type=\\"checkbox\\"
        value=\\"Rice\\"
        checked={fillings === \\"Rice\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <Input
        type=\\"checkbox\\"
        value=\\"Beans\\"
        checked={fillings === \\"Beans\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <Input
        type=\\"checkbox\\"
        value=\\"Cheese\\"
        checked={fillings === \\"Cheese\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <Input
        type=\\"checkbox\\"
        value=\\"Guac (extra)\\"
        checked={fillings === \\"Guac (extra)\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <View>Tortilla: {tortilla}</View>
      <View>Fillings: {fillings}</View>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > bindProperty 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { Input } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [value, setValue] = useState(() => \\"hello\\");

  return <Input value={value} />;
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > classDirective 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { Input } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [focus, setFocus] = useState(() => true);

  return <Input />;
}

MyComponent.defaultProps = {};

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > svelte > Javascript Test > each 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [numbers, setNumbers] = useState(() => [\\"one\\", \\"two\\", \\"three\\"]);

  return (
    <View>
      {numbers?.map((num) => (
        <View>{num}</View>
      ))}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > eventHandlers 1`] = `
"import * as React from \\"react\\";
import { View, Button, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  function log(msg = \\"hello\\") {
    console.log(msg);
  }

  return (
    <View>
      <Button onClick={(a) => log(\\"hi\\")}>Log</Button>
      <Button onClick={(event) => log(event)}>Log</Button>
      <Button onClick={(event) => log(event)}>Log</Button>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > html 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [html, setHtml] = useState(() => \\"<b>bold</b>\\");

  return <View dangerouslySetInnerHTML={{ __html: html }} />;
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > ifElse 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [show, setShow] = useState(() => true);

  function toggle() {
    setShow(!show);
  }

  return (
    <>
      {show ? (
        <>
          <Button onClick={(event) => toggle(event)}> Hide </Button>
        </>
      ) : (
        <Button onClick={(event) => toggle(event)}> Show </Button>
      )}
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > imports 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import Button from \\"./Button\\";
import { View } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [disabled, setDisabled] = useState(() => false);

  return (
    <View>
      <Button type=\\"button\\" disabled={disabled}>
        <>{props.children}</>
      </Button>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > lifecycleHooks 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyComponent(props) {
  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  useEffect(() => {
    console.log(\\"onAfterUpdate\\");
  });

  useEffect(() => {
    return () => {
      console.log(\\"onDestroy\\");
    };
  }, []);

  return <View />;
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > reactive 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [name, setName] = useState(() => \\"Steve\\");

  function lowercaseName() {
    return name.toLowerCase();
  }

  return (
    <View>
      <Input value={name} />
      Lowercase: {lowercaseName()}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > reactiveWithFn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [a, setA] = useState(() => 2);

  const [b, setB] = useState(() => 5);

  const [result, setResult] = useState(() => null);

  function calculateResult(a_, b_) {
    setResult(a_ * b_);
  }

  useEffect(() => {
    calculateResult(a, b);
  }, [a, b]);

  return (
    <View>
      <Input
        type=\\"number\\"
        onChange={(event) => setA(event.target.value)}
        value={a}
      />
      <Input
        type=\\"number\\"
        onChange={(event) => setB(event.target.value)}
        value={b}
      />
      Result: {result}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > slots 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  return (
    <View>
      <>{props.children || \\"default\\"}</>
      <>{props.Test || <View>default</View>}</>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > style 1`] = `
"import * as React from \\"react\\";
import { Input } from \\"@tarojs/components\\";

function MyComponent(props) {
  return (
    <>
      <Input />
      <style jsx>{\`
        input {
          color: red;
          font-size: 12px;
        }

        .form-input:focus {
          outline: 1px solid blue;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Javascript Test > textExpressions 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props) {
  const [a, setA] = useState(() => 5);

  const [b, setB] = useState(() => 12);

  return (
    <View>
      normal:
      {a + b}
      <View />
      conditional
      {a > 2 ? \\"hello\\" : \\"bye\\"}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > basic 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [name, setName] = useState(() => \\"Steve\\");

  return (
    <View>
      <Input onChange={(event) => setName(event.target.value)} value={name} />
      Hello! I can run in React, Vue, Solid, or Liquid!
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > bindGroup 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [tortilla, setTortilla] = useState(() => \\"Plain\\");

  const [fillings, setFillings] = useState(() => []);

  return (
    <View>
      <Input
        type=\\"radio\\"
        value=\\"Plain\\"
        checked={tortilla === \\"Plain\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <Input
        type=\\"radio\\"
        value=\\"Whole wheat\\"
        checked={tortilla === \\"Whole wheat\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <Input
        type=\\"radio\\"
        value=\\"Spinach\\"
        checked={tortilla === \\"Spinach\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <View />
      <View />
      <Input
        type=\\"checkbox\\"
        value=\\"Rice\\"
        checked={fillings === \\"Rice\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <Input
        type=\\"checkbox\\"
        value=\\"Beans\\"
        checked={fillings === \\"Beans\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <Input
        type=\\"checkbox\\"
        value=\\"Cheese\\"
        checked={fillings === \\"Cheese\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <Input
        type=\\"checkbox\\"
        value=\\"Guac (extra)\\"
        checked={fillings === \\"Guac (extra)\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <View>Tortilla: {tortilla}</View>
      <View>Fillings: {fillings}</View>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > bindProperty 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { Input } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [value, setValue] = useState(() => \\"hello\\");

  return <Input value={value} />;
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > classDirective 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { Input } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [focus, setFocus] = useState(() => true);

  return <Input />;
}

MyComponent.defaultProps = {};

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`Taro > svelte > Typescript Test > each 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [numbers, setNumbers] = useState(() => [\\"one\\", \\"two\\", \\"three\\"]);

  return (
    <View>
      {numbers?.map((num) => (
        <View>{num}</View>
      ))}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > eventHandlers 1`] = `
"import * as React from \\"react\\";
import { View, Button, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  function log(msg = \\"hello\\") {
    console.log(msg);
  }

  return (
    <View>
      <Button onClick={(a) => log(\\"hi\\")}>Log</Button>
      <Button onClick={(event) => log(event)}>Log</Button>
      <Button onClick={(event) => log(event)}>Log</Button>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > html 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [html, setHtml] = useState(() => \\"<b>bold</b>\\");

  return <View dangerouslySetInnerHTML={{ __html: html }} />;
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > ifElse 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { Button, View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [show, setShow] = useState(() => true);

  function toggle() {
    setShow(!show);
  }

  return (
    <>
      {show ? (
        <>
          <Button onClick={(event) => toggle(event)}> Hide </Button>
        </>
      ) : (
        <Button onClick={(event) => toggle(event)}> Show </Button>
      )}
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > imports 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import Button from \\"./Button\\";
import { View } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [disabled, setDisabled] = useState(() => false);

  return (
    <View>
      <Button type=\\"button\\" disabled={disabled}>
        <>{props.children}</>
      </Button>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > lifecycleHooks 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { View } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  useEffect(() => {
    console.log(\\"onAfterUpdate\\");
  });

  useEffect(() => {
    return () => {
      console.log(\\"onDestroy\\");
    };
  }, []);

  return <View />;
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > reactive 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [name, setName] = useState(() => \\"Steve\\");

  function lowercaseName() {
    return name.toLowerCase();
  }

  return (
    <View>
      <Input value={name} />
      Lowercase: {lowercaseName()}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > reactiveWithFn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";
import { View, Input, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [a, setA] = useState(() => 2);

  const [b, setB] = useState(() => 5);

  const [result, setResult] = useState(() => null);

  function calculateResult(a_, b_) {
    setResult(a_ * b_);
  }

  useEffect(() => {
    calculateResult(a, b);
  }, [a, b]);

  return (
    <View>
      <Input
        type=\\"number\\"
        onChange={(event) => setA(event.target.value)}
        value={a}
      />
      <Input
        type=\\"number\\"
        onChange={(event) => setB(event.target.value)}
        value={b}
      />
      Result: {result}
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > slots 1`] = `
"import * as React from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  return (
    <View>
      <>{props.children || \\"default\\"}</>
      <>{props.Test || <View>default</View>}</>
    </View>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > style 1`] = `
"import * as React from \\"react\\";
import { Input } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  return (
    <>
      <Input />
      <style jsx>{\`
        input {
          color: red;
          font-size: 12px;
        }

        .form-input:focus {
          outline: 1px solid blue;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Taro > svelte > Typescript Test > textExpressions 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import { View, Text } from \\"@tarojs/components\\";

function MyComponent(props: any) {
  const [a, setA] = useState(() => 5);

  const [b, setB] = useState(() => 12);

  return (
    <View>
      normal:
      {a + b}
      <View />
      conditional
      {a > 2 ? \\"hello\\" : \\"bye\\"}
    </View>
  );
}

export default MyComponent;
"
`;
